tpParse.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
prog' -> . prog [ # ]
## Transitions:
-- On CLASS shift to state 1
-- On prog shift to state 154
-- On list(classe) shift to state 155
-- On classe shift to state 158
## Reductions:
-- On LCURL
--   reduce production list(classe) ->

State 1:
## Known stack suffix:
## CLASS
## LR(1) items:
classe -> CLASS . IDCLASS LPAREN lparamOpt RPAREN heriteOpt IS LCURL corpsClasse RCURL [ LCURL CLASS ]
## Transitions:
-- On IDCLASS shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## CLASS IDCLASS
## LR(1) items:
classe -> CLASS IDCLASS . LPAREN lparamOpt RPAREN heriteOpt IS LCURL corpsClasse RCURL [ LCURL CLASS ]
## Transitions:
-- On LPAREN shift to state 3
## Reductions:

State 3:
## Known stack suffix:
## CLASS IDCLASS LPAREN
## LR(1) items:
classe -> CLASS IDCLASS LPAREN . lparamOpt RPAREN heriteOpt IS LCURL corpsClasse RCURL [ LCURL CLASS ]
## Transitions:
-- On ID shift to state 4
-- On separated_nonempty_list(COMMA,param) shift to state 7
-- On separated_nonempty_list(COMMA,ID) shift to state 8
-- On param shift to state 11
-- On lparamOpt shift to state 14
-- On loption(separated_nonempty_list(COMMA,param)) shift to state 118
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,param)) ->

State 4:
## Known stack suffix:
## ID
## LR(1) items:
separated_nonempty_list(COMMA,ID) -> ID . [ COLON ]
separated_nonempty_list(COMMA,ID) -> ID . COMMA separated_nonempty_list(COMMA,ID) [ COLON ]
## Transitions:
-- On COMMA shift to state 5
## Reductions:
-- On COLON
--   reduce production separated_nonempty_list(COMMA,ID) -> ID

State 5:
## Known stack suffix:
## ID COMMA
## LR(1) items:
separated_nonempty_list(COMMA,ID) -> ID COMMA . separated_nonempty_list(COMMA,ID) [ COLON ]
## Transitions:
-- On ID shift to state 4
-- On separated_nonempty_list(COMMA,ID) shift to state 6
## Reductions:

State 6:
## Known stack suffix:
## ID COMMA separated_nonempty_list(COMMA,ID)
## LR(1) items:
separated_nonempty_list(COMMA,ID) -> ID COMMA separated_nonempty_list(COMMA,ID) . [ COLON ]
## Transitions:
## Reductions:
-- On COLON
--   reduce production separated_nonempty_list(COMMA,ID) -> ID COMMA separated_nonempty_list(COMMA,ID)

State 7:
## Known stack suffix:
## separated_nonempty_list(COMMA,param)
## LR(1) items:
loption(separated_nonempty_list(COMMA,param)) -> separated_nonempty_list(COMMA,param) . [ RPAREN ]
## Transitions:
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,param)) -> separated_nonempty_list(COMMA,param)

State 8:
## Known stack suffix:
## separated_nonempty_list(COMMA,ID)
## LR(1) items:
param -> separated_nonempty_list(COMMA,ID) . COLON IDCLASS [ RPAREN COMMA ]
## Transitions:
-- On COLON shift to state 9
## Reductions:

State 9:
## Known stack suffix:
## separated_nonempty_list(COMMA,ID) COLON
## LR(1) items:
param -> separated_nonempty_list(COMMA,ID) COLON . IDCLASS [ RPAREN COMMA ]
## Transitions:
-- On IDCLASS shift to state 10
## Reductions:

State 10:
## Known stack suffix:
## separated_nonempty_list(COMMA,ID) COLON IDCLASS
## LR(1) items:
param -> separated_nonempty_list(COMMA,ID) COLON IDCLASS . [ RPAREN COMMA ]
## Transitions:
## Reductions:
-- On RPAREN COMMA
--   reduce production param -> separated_nonempty_list(COMMA,ID) COLON IDCLASS

State 11:
## Known stack suffix:
## param
## LR(1) items:
separated_nonempty_list(COMMA,param) -> param . [ RPAREN ]
separated_nonempty_list(COMMA,param) -> param . COMMA separated_nonempty_list(COMMA,param) [ RPAREN ]
## Transitions:
-- On COMMA shift to state 12
## Reductions:
-- On RPAREN
--   reduce production separated_nonempty_list(COMMA,param) -> param

State 12:
## Known stack suffix:
## param COMMA
## LR(1) items:
separated_nonempty_list(COMMA,param) -> param COMMA . separated_nonempty_list(COMMA,param) [ RPAREN ]
## Transitions:
-- On ID shift to state 4
-- On separated_nonempty_list(COMMA,param) shift to state 13
-- On separated_nonempty_list(COMMA,ID) shift to state 8
-- On param shift to state 11
## Reductions:

State 13:
## Known stack suffix:
## param COMMA separated_nonempty_list(COMMA,param)
## LR(1) items:
separated_nonempty_list(COMMA,param) -> param COMMA separated_nonempty_list(COMMA,param) . [ RPAREN ]
## Transitions:
## Reductions:
-- On RPAREN
--   reduce production separated_nonempty_list(COMMA,param) -> param COMMA separated_nonempty_list(COMMA,param)

State 14:
## Known stack suffix:
## CLASS IDCLASS LPAREN lparamOpt
## LR(1) items:
classe -> CLASS IDCLASS LPAREN lparamOpt . RPAREN heriteOpt IS LCURL corpsClasse RCURL [ LCURL CLASS ]
## Transitions:
-- On RPAREN shift to state 15
## Reductions:

State 15:
## Known stack suffix:
## CLASS IDCLASS LPAREN lparamOpt RPAREN
## LR(1) items:
classe -> CLASS IDCLASS LPAREN lparamOpt RPAREN . heriteOpt IS LCURL corpsClasse RCURL [ LCURL CLASS ]
## Transitions:
-- On EXTENDS shift to state 16
-- On option(extClasse) shift to state 18
-- On heriteOpt shift to state 19
-- On extClasse shift to state 153
## Reductions:
-- On IS
--   reduce production option(extClasse) ->

State 16:
## Known stack suffix:
## EXTENDS
## LR(1) items:
extClasse -> EXTENDS . IDCLASS [ IS ]
## Transitions:
-- On IDCLASS shift to state 17
## Reductions:

State 17:
## Known stack suffix:
## EXTENDS IDCLASS
## LR(1) items:
extClasse -> EXTENDS IDCLASS . [ IS ]
## Transitions:
## Reductions:
-- On IS
--   reduce production extClasse -> EXTENDS IDCLASS

State 18:
## Known stack suffix:
## option(extClasse)
## LR(1) items:
heriteOpt -> option(extClasse) . [ IS ]
## Transitions:
## Reductions:
-- On IS
--   reduce production heriteOpt -> option(extClasse)

State 19:
## Known stack suffix:
## CLASS IDCLASS LPAREN lparamOpt RPAREN heriteOpt
## LR(1) items:
classe -> CLASS IDCLASS LPAREN lparamOpt RPAREN heriteOpt . IS LCURL corpsClasse RCURL [ LCURL CLASS ]
## Transitions:
-- On IS shift to state 20
## Reductions:

State 20:
## Known stack suffix:
## CLASS IDCLASS LPAREN lparamOpt RPAREN heriteOpt IS
## LR(1) items:
classe -> CLASS IDCLASS LPAREN lparamOpt RPAREN heriteOpt IS . LCURL corpsClasse RCURL [ LCURL CLASS ]
## Transitions:
-- On LCURL shift to state 21
## Reductions:

State 21:
## Known stack suffix:
## CLASS IDCLASS LPAREN lparamOpt RPAREN heriteOpt IS LCURL
## LR(1) items:
classe -> CLASS IDCLASS LPAREN lparamOpt RPAREN heriteOpt IS LCURL . corpsClasse RCURL [ LCURL CLASS ]
## Transitions:
-- On STATIC shift to state 22
-- On list(champ) shift to state 23
-- On lchamp shift to state 24
-- On corpsClasse shift to state 138
-- On champ shift to state 140
-- On boption(STATIC) shift to state 142
## Reductions:
-- On ID AUTO
--   reduce production boption(STATIC) ->
-- On RCURL DEF
--   reduce production list(champ) ->

State 22:
## Known stack suffix:
## STATIC
## LR(1) items:
boption(STATIC) -> STATIC . [ ID AUTO ]
## Transitions:
## Reductions:
-- On ID AUTO
--   reduce production boption(STATIC) -> STATIC

State 23:
## Known stack suffix:
## list(champ)
## LR(1) items:
lchamp -> list(champ) . [ RCURL DEF ]
## Transitions:
## Reductions:
-- On RCURL DEF
--   reduce production lchamp -> list(champ)

State 24:
## Known stack suffix:
## lchamp
## LR(1) items:
corpsClasse -> lchamp . lmeth [ RCURL ]
## Transitions:
-- On DEF shift to state 25
-- On methode shift to state 134
-- On lmeth shift to state 136
-- On list(methode) shift to state 137
## Reductions:
-- On RCURL
--   reduce production list(methode) ->

State 25:
## Known stack suffix:
## DEF
## LR(1) items:
methode -> DEF . boption(OVERRIDE) boption(STATIC) ID LPAREN lparamOpt RPAREN suiteMethode [ RCURL DEF ]
methode -> DEF . IDCLASS LPAREN lparamOpt RPAREN option(super) IS bloc [ RCURL DEF ]
## Transitions:
-- On OVERRIDE shift to state 26
-- On IDCLASS shift to state 27
-- On boption(OVERRIDE) shift to state 119
## Reductions:
-- On STATIC ID
--   reduce production boption(OVERRIDE) ->

State 26:
## Known stack suffix:
## OVERRIDE
## LR(1) items:
boption(OVERRIDE) -> OVERRIDE . [ STATIC ID ]
## Transitions:
## Reductions:
-- On STATIC ID
--   reduce production boption(OVERRIDE) -> OVERRIDE

State 27:
## Known stack suffix:
## DEF IDCLASS
## LR(1) items:
methode -> DEF IDCLASS . LPAREN lparamOpt RPAREN option(super) IS bloc [ RCURL DEF ]
## Transitions:
-- On LPAREN shift to state 28
## Reductions:

State 28:
## Known stack suffix:
## DEF IDCLASS LPAREN
## LR(1) items:
methode -> DEF IDCLASS LPAREN . lparamOpt RPAREN option(super) IS bloc [ RCURL DEF ]
## Transitions:
-- On ID shift to state 4
-- On separated_nonempty_list(COMMA,param) shift to state 7
-- On separated_nonempty_list(COMMA,ID) shift to state 8
-- On param shift to state 11
-- On lparamOpt shift to state 29
-- On loption(separated_nonempty_list(COMMA,param)) shift to state 118
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,param)) ->

State 29:
## Known stack suffix:
## DEF IDCLASS LPAREN lparamOpt
## LR(1) items:
methode -> DEF IDCLASS LPAREN lparamOpt . RPAREN option(super) IS bloc [ RCURL DEF ]
## Transitions:
-- On RPAREN shift to state 30
## Reductions:

State 30:
## Known stack suffix:
## DEF IDCLASS LPAREN lparamOpt RPAREN
## LR(1) items:
methode -> DEF IDCLASS LPAREN lparamOpt RPAREN . option(super) IS bloc [ RCURL DEF ]
## Transitions:
-- On COLON shift to state 31
-- On super shift to state 81
-- On option(super) shift to state 82
## Reductions:
-- On IS
--   reduce production option(super) ->

State 31:
## Known stack suffix:
## COLON
## LR(1) items:
super -> COLON . IDCLASS LPAREN largOpt RPAREN [ IS ]
## Transitions:
-- On IDCLASS shift to state 32
## Reductions:

State 32:
## Known stack suffix:
## COLON IDCLASS
## LR(1) items:
super -> COLON IDCLASS . LPAREN largOpt RPAREN [ IS ]
## Transitions:
-- On LPAREN shift to state 33
## Reductions:

State 33:
## Known stack suffix:
## COLON IDCLASS LPAREN
## LR(1) items:
super -> COLON IDCLASS LPAREN . largOpt RPAREN [ IS ]
## Transitions:
-- On THIS shift to state 34
-- On SUPER shift to state 35
-- On RESULT shift to state 36
-- On PLUS shift to state 37
-- On NEW shift to state 38
-- On MINUS shift to state 41
-- On LPAREN shift to state 42
-- On IDCLASS shift to state 44
-- On ID shift to state 45
-- On CSTES shift to state 46
-- On CSTE shift to state 47
-- On separated_nonempty_list(COMMA,expression) shift to state 54
-- On loption(separated_nonempty_list(COMMA,expression)) shift to state 55
-- On largOpt shift to state 79
-- On expression shift to state 58
-- On acces shift to state 65
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,expression)) ->

State 34:
## Known stack suffix:
## THIS
## LR(1) items:
acces -> THIS . [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
## Transitions:
## Reductions:
-- On WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND
--   reduce production acces -> THIS

State 35:
## Known stack suffix:
## SUPER
## LR(1) items:
acces -> SUPER . [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
## Transitions:
## Reductions:
-- On WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND
--   reduce production acces -> SUPER

State 36:
## Known stack suffix:
## RESULT
## LR(1) items:
acces -> RESULT . [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
## Transitions:
## Reductions:
-- On WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND
--   reduce production acces -> RESULT

State 37:
## Known stack suffix:
## PLUS
## LR(1) items:
expression -> PLUS . expression [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
## Transitions:
-- On THIS shift to state 34
-- On SUPER shift to state 35
-- On RESULT shift to state 36
-- On PLUS shift to state 37
-- On NEW shift to state 38
-- On MINUS shift to state 41
-- On LPAREN shift to state 42
-- On IDCLASS shift to state 44
-- On ID shift to state 45
-- On CSTES shift to state 46
-- On CSTE shift to state 47
-- On expression shift to state 78
-- On acces shift to state 65
## Reductions:

State 38:
## Known stack suffix:
## NEW
## LR(1) items:
expression -> NEW . IDCLASS LPAREN largOpt RPAREN [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
## Transitions:
-- On IDCLASS shift to state 39
## Reductions:

State 39:
## Known stack suffix:
## NEW IDCLASS
## LR(1) items:
expression -> NEW IDCLASS . LPAREN largOpt RPAREN [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
## Transitions:
-- On LPAREN shift to state 40
## Reductions:

State 40:
## Known stack suffix:
## NEW IDCLASS LPAREN
## LR(1) items:
expression -> NEW IDCLASS LPAREN . largOpt RPAREN [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
## Transitions:
-- On THIS shift to state 34
-- On SUPER shift to state 35
-- On RESULT shift to state 36
-- On PLUS shift to state 37
-- On NEW shift to state 38
-- On MINUS shift to state 41
-- On LPAREN shift to state 42
-- On IDCLASS shift to state 44
-- On ID shift to state 45
-- On CSTES shift to state 46
-- On CSTE shift to state 47
-- On separated_nonempty_list(COMMA,expression) shift to state 54
-- On loption(separated_nonempty_list(COMMA,expression)) shift to state 55
-- On largOpt shift to state 76
-- On expression shift to state 58
-- On acces shift to state 65
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,expression)) ->

State 41:
## Known stack suffix:
## MINUS
## LR(1) items:
expression -> MINUS . expression [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
## Transitions:
-- On THIS shift to state 34
-- On SUPER shift to state 35
-- On RESULT shift to state 36
-- On PLUS shift to state 37
-- On NEW shift to state 38
-- On MINUS shift to state 41
-- On LPAREN shift to state 42
-- On IDCLASS shift to state 44
-- On ID shift to state 45
-- On CSTES shift to state 46
-- On CSTE shift to state 47
-- On expression shift to state 75
-- On acces shift to state 65
## Reductions:

State 42:
## Known stack suffix:
## LPAREN
## LR(1) items:
expression -> LPAREN . expression RPAREN [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
expression -> LPAREN . IDCLASS expression RPAREN [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
## Transitions:
-- On THIS shift to state 34
-- On SUPER shift to state 35
-- On RESULT shift to state 36
-- On PLUS shift to state 37
-- On NEW shift to state 38
-- On MINUS shift to state 41
-- On LPAREN shift to state 42
-- On IDCLASS shift to state 43
-- On ID shift to state 45
-- On CSTES shift to state 46
-- On CSTE shift to state 47
-- On expression shift to state 73
-- On acces shift to state 65
## Reductions:

State 43:
## Known stack suffix:
## LPAREN IDCLASS
## LR(1) items:
expression -> IDCLASS . [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMPERSAND ]
expression -> LPAREN IDCLASS . expression RPAREN [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
## Transitions:
-- On THIS shift to state 34
-- On SUPER shift to state 35
-- On RESULT shift to state 36
-- On PLUS shift to state 37
-- On NEW shift to state 38
-- On MINUS shift to state 41
-- On LPAREN shift to state 42
-- On IDCLASS shift to state 44
-- On ID shift to state 45
-- On CSTES shift to state 46
-- On CSTE shift to state 47
-- On expression shift to state 48
-- On acces shift to state 65
## Reductions:
-- On TIMES RPAREN RELOP DOT DIV AMPERSAND
--   reduce production expression -> IDCLASS

State 44:
## Known stack suffix:
## IDCLASS
## LR(1) items:
expression -> IDCLASS . [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
## Transitions:
## Reductions:
-- On WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND
--   reduce production expression -> IDCLASS

State 45:
## Known stack suffix:
## ID
## LR(1) items:
expression -> ID . [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
## Transitions:
## Reductions:
-- On WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND
--   reduce production expression -> ID

State 46:
## Known stack suffix:
## CSTES
## LR(1) items:
expression -> CSTES . [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
## Transitions:
## Reductions:
-- On WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND
--   reduce production expression -> CSTES

State 47:
## Known stack suffix:
## CSTE
## LR(1) items:
expression -> CSTE . [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
## Transitions:
## Reductions:
-- On WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND
--   reduce production expression -> CSTE

State 48:
## Known stack suffix:
## LPAREN IDCLASS expression
## LR(1) items:
expression -> LPAREN IDCLASS expression . RPAREN [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
expression -> expression . DOT ID [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMPERSAND ]
expression -> expression . DOT ID LPAREN largOpt RPAREN [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMPERSAND ]
expression -> expression . PLUS expression [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMPERSAND ]
expression -> expression . MINUS expression [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMPERSAND ]
expression -> expression . TIMES expression [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMPERSAND ]
expression -> expression . DIV expression [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMPERSAND ]
expression -> expression . RELOP expression [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMPERSAND ]
expression -> expression . AMPERSAND expression [ TIMES RPAREN RELOP PLUS MINUS DOT DIV AMPERSAND ]
## Transitions:
-- On TIMES shift to state 49
-- On RPAREN shift to state 72
-- On RELOP shift to state 59
-- On PLUS shift to state 61
-- On MINUS shift to state 66
-- On DOT shift to state 51
-- On DIV shift to state 63
-- On AMPERSAND shift to state 70
## Reductions:

State 49:
## Known stack suffix:
## expression TIMES
## LR(1) items:
expression -> expression TIMES . expression [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
## Transitions:
-- On THIS shift to state 34
-- On SUPER shift to state 35
-- On RESULT shift to state 36
-- On PLUS shift to state 37
-- On NEW shift to state 38
-- On MINUS shift to state 41
-- On LPAREN shift to state 42
-- On IDCLASS shift to state 44
-- On ID shift to state 45
-- On CSTES shift to state 46
-- On CSTE shift to state 47
-- On expression shift to state 50
-- On acces shift to state 65
## Reductions:

State 50:
## Known stack suffix:
## expression TIMES expression
## LR(1) items:
expression -> expression . DOT ID [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
expression -> expression . DOT ID LPAREN largOpt RPAREN [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
expression -> expression . PLUS expression [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
expression -> expression . MINUS expression [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
expression -> expression . TIMES expression [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
expression -> expression TIMES expression . [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
expression -> expression . DIV expression [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
expression -> expression . RELOP expression [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
expression -> expression . AMPERSAND expression [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
## Transitions:
-- On DOT shift to state 51
## Reductions:
-- On WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DIV DEF COMMA AMPERSAND
--   reduce production expression -> expression TIMES expression

State 51:
## Known stack suffix:
## expression DOT
## LR(1) items:
expression -> expression DOT . ID [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
expression -> expression DOT . ID LPAREN largOpt RPAREN [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
## Transitions:
-- On ID shift to state 52
## Reductions:

State 52:
## Known stack suffix:
## expression DOT ID
## LR(1) items:
expression -> expression DOT ID . [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
expression -> expression DOT ID . LPAREN largOpt RPAREN [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
## Transitions:
-- On LPAREN shift to state 53
## Reductions:
-- On WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND
--   reduce production expression -> expression DOT ID

State 53:
## Known stack suffix:
## expression DOT ID LPAREN
## LR(1) items:
expression -> expression DOT ID LPAREN . largOpt RPAREN [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
## Transitions:
-- On THIS shift to state 34
-- On SUPER shift to state 35
-- On RESULT shift to state 36
-- On PLUS shift to state 37
-- On NEW shift to state 38
-- On MINUS shift to state 41
-- On LPAREN shift to state 42
-- On IDCLASS shift to state 44
-- On ID shift to state 45
-- On CSTES shift to state 46
-- On CSTE shift to state 47
-- On separated_nonempty_list(COMMA,expression) shift to state 54
-- On loption(separated_nonempty_list(COMMA,expression)) shift to state 55
-- On largOpt shift to state 56
-- On expression shift to state 58
-- On acces shift to state 65
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,expression)) ->

State 54:
## Known stack suffix:
## separated_nonempty_list(COMMA,expression)
## LR(1) items:
loption(separated_nonempty_list(COMMA,expression)) -> separated_nonempty_list(COMMA,expression) . [ RPAREN ]
## Transitions:
## Reductions:
-- On RPAREN
--   reduce production loption(separated_nonempty_list(COMMA,expression)) -> separated_nonempty_list(COMMA,expression)

State 55:
## Known stack suffix:
## loption(separated_nonempty_list(COMMA,expression))
## LR(1) items:
largOpt -> loption(separated_nonempty_list(COMMA,expression)) . [ RPAREN ]
## Transitions:
## Reductions:
-- On RPAREN
--   reduce production largOpt -> loption(separated_nonempty_list(COMMA,expression))

State 56:
## Known stack suffix:
## expression DOT ID LPAREN largOpt
## LR(1) items:
expression -> expression DOT ID LPAREN largOpt . RPAREN [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
## Transitions:
-- On RPAREN shift to state 57
## Reductions:

State 57:
## Known stack suffix:
## expression DOT ID LPAREN largOpt RPAREN
## LR(1) items:
expression -> expression DOT ID LPAREN largOpt RPAREN . [ WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND ]
## Transitions:
## Reductions:
-- On WALRUS TIMES THEN SEMICOLON RPAREN RELOP RCURL PLUS MINUS DOT DIV DEF COMMA AMPERSAND
--   reduce production expression -> expression DOT ID LPAREN largOpt RPAREN
